changes/4.16/d0c8f6ad8b381dd572576ac50b9696d4d31142bb
media: imx: fix breakages when compiling for arm

As reported:

   drivers/staging/media/imx/imx-media-dev.c: In function 'find_async_subdev':
>> drivers/staging/media/imx/imx-media-dev.c:55:49: error: request for member 'name' in something not a structure or union
       if (devname && !strcmp(asd->match.device_name.name,
                                                    ^
   drivers/staging/media/imx/imx-media-dev.c: In function 'imx_media_add_async_subdev':
   drivers/staging/media/imx/imx-media-dev.c:110:25: error: request for member 'name' in something not a structure or union
      asd->match.device_name.name = devname;
                            ^

Reported-by: kbuild test robot <fengguang.wu@intel.com>
Signed-off-by: Mauro Carvalho Chehab <mchehab@s-opensource.com>

